Fixed wrong format for nav in the side bar and minor issues in element alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,9 +134,7 @@ blockquote p {
     color: #f64929;
 }
 
-.sidebar .nav .nav-item {
-    padding: 0.2em 1em;
-    line-height: 10px;
+.sidebar .nav .nav-link {
     border-top: solid 1px rgba(255, 255, 255, 0.05);
     box-shadow: 0 -1px 0 0 rgba(0, 0, 0, 0.15);
 }
